--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,2 @@
 [web]
-3.111.32.233 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa
+65.0.7.0 ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/id_rsa
